--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.0",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "@types/node": "^22.0.0",
     "typescript": "^5.6.0"
